# finalizer

./: .gitignore  README.md  pyproject.toml
finalizer/: __init__.py  finalizer.py
finalizer/examples/: example1.py  multi_process.py  multithread.py
